--- a/paye/views/paye_view.xml
+++ b/paye/views/paye_view.xml
@@ -136,6 +136,39 @@
                                      </page>
                                    </notebook> 
                 </xpath>
+                 <xpath expr="//button[@name='draft_payslip_run']" position="after"> 
+                     <button name="comptabiliser" type="object"  string="Comptabiliser"  attrs="{'invisible': [('compta', '!=', False)]}"/>
+                </xpath> 
+                <field name="credit_note" position="after">
+                        <field name="compta" readonly="1"/>
+                        <field name="move_id"/>
+                </field>
+            </field>
+        </record>
+
+       <record id="view_paye_company_form" model="ir.ui.view">
+            <field name="name">Companyrh.ext</field>
+            <field name="model">res.company</field>
+            <field name="inherit_id" ref="base.view_company_form"/>
+            <field name="arch" type="xml">
+                <xpath expr="//page[1]" position="after">
+                    <page string="Comptabilité paie">  
+			           <group>                               
+                         <field name="journalpaie"/>
+                         <field name="salap"/>
+                         <field name="prime"/>
+                         <field name="ind"/>
+                         <field name="cnsspat"/>
+                         <field name="remdu"/>
+                         <field name="cnsssal"/>
+                         <field name="cnsspatc"/>
+                         <field name="impot"/>
+                         <field name="retc"/>
+                         <field name="retachat"/>
+                         <field name="avance"/>
+			           </group>   
+                    </page>      
+                </xpath>
             </field>
         </record>
 	 </data>
