--- a/caisse/wizard/etats_caisse.xml
+++ b/caisse/wizard/etats_caisse.xml
@@ -83,13 +83,16 @@
             <field name="model">pos.stocks.wizard</field>
             <field name="arch" type="xml">
                 <form string="Stocks">
+                  <group>
                     <group>
                         <field name="start_date"/>
                         <field name="end_date"/>
                     </group>
                     <group>
-                        <field name="location" colspan="4" nolabel="1" />
+                        <field name="location"/>
+                        <field name="avecm"/>
                     </group>
+                   </group>
                     <footer>
                         <button name="generate_report" string="Imprimer" type="object" class="btn-primary"/>
                         <button string="Cancel" class="btn-default" special="Annuler" />
