--- a/caisse/views/report_stock.xml
+++ b/caisse/views/report_stock.xml
@@ -11,6 +11,7 @@
                 <table class="table table-condensed">
                     <thead>
                         <tr class="text-center">
+                            <th>Code</th>
                             <th>Produit</th>
                             <th>Stock initial</th>
                             <th>Quantité entrée</th>
@@ -21,6 +22,7 @@
                     <tbody>
                         <t t-foreach="alines" t-as="aline">
                             <tr>
+                                <td><img t-if="aline['barcode']" t-att-src="'data:image/png;base64,%s' % aline['barcode']"/></td>
                                 <td><span t-esc="aline['produit']"/></td>
                                 <td align="right"><span t-esc="'{:,.0f}'.format(aline['stinit']).replace(',', ' ').replace('.', ',')"/></td>
                                 <td align="right"><span t-esc="'{:,.0f}'.format(aline['qteent']).replace(',', ' ').replace('.', ',')"/></td>
