--- a/caisse/views/report_stock.xml
+++ b/caisse/views/report_stock.xml
@@ -23,7 +23,8 @@
                         <t t-foreach="alines" t-as="aline">
                             <tr>
                                 <!--<td><img t-if="aline['barcode']" t-att-src="'data:image/png;base64,%s' % aline['barcode']"/></td>-->
-                                <td><span t-esc="aline['barcode']"/></td>
+                                <td><t t-set="qr_src">/report/barcode/?type=QR&amp;value=<t t-esc="aline['barcode']" />&amp;width=50&amp;height=15</t><img t-att-src="'%s' % qr_src"/></td>
+                                <!--<td><span t-esc="aline['barcode']"/></td>-->
                                 <td><span t-esc="aline['produit']"/></td>
                                 <td align="right"><span t-esc="'{:,.0f}'.format(aline['stinit']).replace(',', ' ').replace('.', ',')"/></td>
                                 <td align="right"><span t-esc="'{:,.0f}'.format(aline['qteent']).replace(',', ' ').replace('.', ',')"/></td>
