--- a/caisse/wizard/etats_caisse.xml
+++ b/caisse/wizard/etats_caisse.xml
@@ -106,8 +106,32 @@
             <field name="view_mode">form</field>
             <field name="target">new</field>
         </record>
+        <record id="view_pos_ventes_wizard" model="ir.ui.view">
+            <field name="name">pos.ventes.wizard.form</field>
+            <field name="model">pos.ventes.wizard</field>
+            <field name="arch" type="xml">
+                <form string="Ventes">
+                  <group>
+                    <group>
+                        <field name="start_date"/>
+                    </group>
+                   </group>
+                    <footer>
+                        <button name="generate_report" string="Imprimer" type="object" class="btn-primary"/>
+                        <button string="Cancel" class="btn-default" special="Annuler" />
+                    </footer>
+                </form>
+            </field>
+        </record>
+        <record id="action_report_pos_ventes" model="ir.actions.act_window">
+            <field name="name">Etat ventes</field>
+            <field name="res_model">pos.ventes.wizard</field>
+            <field name="view_mode">form</field>
+            <field name="target">new</field>
+        </record>
         <menuitem id="menu_report_vendeurs" name="Etat par vendeur" action="action_report_pos_vendeurs" parent="point_of_sale.menu_point_rep" sequence="5"/>
         <menuitem id="menu_report_vendeursdet" name="Etat détaillé vendeur" action="action_report_pos_vendeursdet" parent="point_of_sale.menu_point_rep" sequence="7"/>
         <menuitem id="menu_report_rayonsdet" name="Etat par rayon" action="action_report_pos_rayonsdet" parent="point_of_sale.menu_point_rep" sequence="9"/>
+        <menuitem id="menu_report_ventes" name="Etat journalier des ventes" action="action_report_pos_ventes" parent="point_of_sale.menu_point_rep" sequence="10"/>
         <menuitem id="menu_report_stocks" name="Etat Stocks" action="action_report_pos_stocks" parent="stock.menu_warehouse_report" sequence="200" groups="caisse.group_caisse_stock"/>
 </odoo>
