--- a/caisse/views/caisse_report.xml
+++ b/caisse/views/caisse_report.xml
@@ -27,5 +27,10 @@
         <field name="report_type">qweb-pdf</field>
         <field name="report_name">caisse.report_stocks</field>
     </record>
-
+    <record id="sale_ventes_report" model="ir.actions.report">
+        <field name="name">Etat ventes</field>
+        <field name="model">report.caisse.report_ventes</field>
+        <field name="report_type">qweb-pdf</field>
+        <field name="report_name">caisse.report_ventes</field>
+    </record>
 </odoo>
