--- a/caisse/wizard/etats_caisse.xml
+++ b/caisse/wizard/etats_caisse.xml
@@ -114,6 +114,7 @@
                   <group>
                     <group>
                         <field name="start_date"/>
+                        <field name="end_date"/>
                     </group>
                    </group>
                     <footer>
