--- a/caisse/views/caisse_report.xml
+++ b/caisse/views/caisse_report.xml
@@ -33,4 +33,7 @@
         <field name="report_type">qweb-pdf</field>
         <field name="report_name">caisse.report_ventes</field>
     </record>
+    <record id="sale_ventes_report" model="ir.actions.report">
+            <field name="paperformat_id" ref="hr_holidays.paperformat_hrsummary"/>
+    </record>
 </odoo>
