--- a/caisse/views/report_ventes.xml
+++ b/caisse/views/report_ventes.xml
@@ -21,8 +21,8 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <t t-set="margecash" t-value="0">
-                        <t t-set="ventecash" t-value="0">    
+                        <t t-set="margecash" t-value="0"/>
+                        <t t-set="ventecash" t-value="0"/>    
                         <t t-foreach="alines" t-as="aline">
                             <tr>
                                 <!--<td><img t-if="aline['barcode']" t-att-src="'data:image/png;base64,%s' % aline['barcode']"/></td>-->
@@ -40,8 +40,8 @@
                                 <td align="right"><span t-esc="'{:,.0f}'.format(aline['margetot']).replace(',', ' ').replace('.', ',')"/></td>
                                 <td align="right"><span t-esc="'{:,.0f}'.format(aline['totvente']).replace(',', ' ').replace('.', ',')"/></td>
                             </tr>
-                            <t t-set="ventecash" t-value="ventecash+aline['totvente']">
-                            <t t-set="margecash" t-value="margecash+aline['margetot']">
+                            <t t-set="ventecash" t-value="ventecash+aline['totvente']"/>
+                            <t t-set="margecash" t-value="margecash+aline['margetot']"/>
                             <tr><td colspan="6">Sous Total POS-Cash</td>
                                 <td><span t-esc="'{:,.0f}'.format(margecash).replace(',', ' ').replace('.', ',')"/></td>
                                 <td><span t-esc="'{:,.0f}'.format(ventecash).replace(',', ' ').replace('.', ',')"/></td>
