--- a/caisse/views/report_ventes.xml
+++ b/caisse/views/report_ventes.xml
@@ -47,6 +47,37 @@
                                 <td><span t-esc="'{:,.0f}'.format(margecash).replace(',', ' ').replace('.', ',')"/></td>
                                 <td><span t-esc="'{:,.0f}'.format(ventecash).replace(',', ' ').replace('.', ',')"/></td>
                             </tr>
+                        
+                        <t t-set="margecredit" t-value="0"/>
+                        <t t-set="ventecredit" t-value="0"/>    
+                        <t t-foreach="clines" t-as="aline">
+                            <tr>
+                                <!--<td><img t-if="aline['barcode']" t-att-src="'data:image/png;base64,%s' % aline['barcode']"/></td>-->
+                                <!--<td><t t-set="qr_src">/report/barcode/?type=QR&amp;value=<t t-esc="aline['barcode']" />&amp;width=50&amp;height=15</t><img t-att-src="'%s' % qr_src"/></td>-->
+                                <!--<td><span t-esc="aline['barcode']"/></td>-->
+                                <td><img t-if="aline['barcode'] and len(aline['barcode']) == 13" t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('EAN13', aline['barcode'], 600, 150)" style="width:100%;height:20%;"/>
+                                <img t-elif="aline['barcode'] and len(aline['barcode']) == 8" t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('EAN8', aline['barcode'], 600, 150)" style="width:100%;height:20%;"/>
+                                <img t-else="" t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('Code128', aline['barcode'], 600, 150)" style="width:100%;height:20%;"/>
+                                <span t-esc="aline['barcode']"/></td>
+                                <td><span t-esc="aline['produit']"/></td>
+                                <td align="right"><span t-esc="'{:,.0f}'.format(aline['quantite']).replace(',', ' ').replace('.', ',')"/></td>
+                                <td align="right"><span t-esc="'{:,.0f}'.format(aline['prixrevient']).replace(',', ' ').replace('.', ',')"/></td>
+                                <td align="right"><span t-esc="'{:,.0f}'.format(aline['prixvente']).replace(',', ' ').replace('.', ',')"/></td>
+                                <td align="right"><span t-esc="'{:,.0f}'.format(aline['margeunit']).replace(',', ' ').replace('.', ',')"/></td>
+                                <td align="right"><span t-esc="'{:,.0f}'.format(aline['margetot']).replace(',', ' ').replace('.', ',')"/></td>
+                                <td align="right"><span t-esc="'{:,.0f}'.format(aline['totvente']).replace(',', ' ').replace('.', ',')"/></td>
+                            </tr>
+                            <t t-set="ventecredit" t-value="ventecredit+aline['totvente']"/>
+                            <t t-set="margecredit" t-value="margecredit+aline['margetot']"/>
+                        </t>
+                            <tr><td colspan="6">Sous Total POS-Crédit</td>
+                                <td><span t-esc="'{:,.0f}'.format(margecredit).replace(',', ' ').replace('.', ',')"/></td>
+                                <td><span t-esc="'{:,.0f}'.format(ventecredit).replace(',', ' ').replace('.', ',')"/></td>
+                            </tr>
+                             <tr><td colspan="6">Grand Total</td>
+                                <td><span t-esc="'{:,.0f}'.format(margecash+margecredit).replace(',', ' ').replace('.', ',')"/></td>
+                                <td><span t-esc="'{:,.0f}'.format(ventecash+ventecredit).replace(',', ' ').replace('.', ',')"/></td>
+                            </tr>
                     </tbody>
                 </table>
             </div>
