--- a/caisse/views/report_ventes.xml
+++ b/caisse/views/report_ventes.xml
@@ -14,7 +14,7 @@
                             <th>Produit</th>
                             <th>Quantié vendue</th>
                             <th>Coût de revient</th>
-                            <th>Prix de vente après remise</th>
+                            <th>Pu Vente Net</th>
                             <th>Marge unitaire</th>
                             <th>Marge totale</th>
                             <th>Total vendu</th>
