--- a/caisse/views/report_ventes.xml
+++ b/caisse/views/report_ventes.xml
@@ -5,7 +5,7 @@
     <t t-call="web.html_container">
     <t t-call="web.internal_layout">
             <div class="page">
-                <div align="center"><strong><span t-esc="res_company.name"/>: Ventes du <t t-esc="date_start" t-options="{'widget': 'datetime'}"/> au <t t-esc="date_stop" t-options="{'widget': 'datetime'}"/></strong></div><br/>
+                <div align="center"><h3><strong><span t-esc="res_company.name"/>: Ventes du <t t-esc="date_start" t-options="{'widget': 'datetime'}"/> au <t t-esc="date_stop" t-options="{'widget': 'datetime'}"/></strong></h3></div><br/>
 
                 <table class="table table-condensed">
                     <thead>
@@ -43,9 +43,9 @@
                             <t t-set="ventecash" t-value="ventecash+aline['totvente']"/>
                             <t t-set="margecash" t-value="margecash+aline['margetot']"/>
                         </t>
-                            <tr><td colspan="6" style="background-color:#ccc;font-weight:bold;fon-size:16px;">Sous Total POS-Cash</td>
-                                <td style="background-color:#ccc;font-weight:bold;fon-size:16px;"><span t-esc="'{:,.0f}'.format(margecash).replace(',', ' ').replace('.', ',')"/></td>
-                                <td style="background-color:#ccc;font-weight:bold;fon-size:16px;"><span t-esc="'{:,.0f}'.format(ventecash).replace(',', ' ').replace('.', ',')"/></td>
+                            <tr><td colspan="6" style="background-color:#ccc;font-weight:bold;fon-size:18px;">Sous Total POS-Cash</td>
+                                <td style="background-color:#ccc;font-weight:bold;fon-size:18px;"><span t-esc="'{:,.0f}'.format(margecash).replace(',', ' ').replace('.', ',')"/></td>
+                                <td style="background-color:#ccc;font-weight:bold;fon-size:18px;"><span t-esc="'{:,.0f}'.format(ventecash).replace(',', ' ').replace('.', ',')"/></td>
                             </tr>
                         
                         <t t-set="margecredit" t-value="0"/>
@@ -70,13 +70,13 @@
                             <t t-set="ventecredit" t-value="ventecredit+aline['totvente']"/>
                             <t t-set="margecredit" t-value="margecredit+aline['margetot']"/>
                         </t>
-                            <tr><td colspan="6" style="background-color:#ccc;font-weight:bold;fon-size:16px;">Sous Total POS-Crédit</td>
-                                <td style="background-color:#ccc;font-weight:bold;fon-size:16px;"><span t-esc="'{:,.0f}'.format(margecredit).replace(',', ' ').replace('.', ',')"/></td>
-                                <td style="background-color:#ccc;font-weight:bold;fon-size:16px;"><span t-esc="'{:,.0f}'.format(ventecredit).replace(',', ' ').replace('.', ',')"/></td>
+                            <tr><td colspan="6" style="background-color:#ccc;font-weight:bold;fon-size:18px;">Sous Total POS-Crédit</td>
+                                <td style="background-color:#ccc;font-weight:bold;fon-size:18px;"><span t-esc="'{:,.0f}'.format(margecredit).replace(',', ' ').replace('.', ',')"/></td>
+                                <td style="background-color:#ccc;font-weight:bold;fon-size:18px;"><span t-esc="'{:,.0f}'.format(ventecredit).replace(',', ' ').replace('.', ',')"/></td>
                             </tr>
-                             <tr><td colspan="6" style="background-color:#ccc;font-weight:bold;">Grand Total</td>
-                                <td style="background-color:#ccc;font-weight:bold;fon-size:16px;"><span t-esc="'{:,.0f}'.format(margecash+margecredit).replace(',', ' ').replace('.', ',')"/></td>
-                                <td style="background-color:#ccc;font-weight:bold;fon-size:16px;"><span t-esc="'{:,.0f}'.format(ventecash+ventecredit).replace(',', ' ').replace('.', ',')"/></td>
+                             <tr><td colspan="6" style="background-color:#ccc;font-weight:bold;fon-size:18px;">Grand Total</td>
+                                <td style="background-color:#ccc;font-weight:bold;fon-size:18px;"><span t-esc="'{:,.0f}'.format(margecash+margecredit).replace(',', ' ').replace('.', ',')"/></td>
+                                <td style="background-color:#ccc;font-weight:bold;fon-size:18px;"><span t-esc="'{:,.0f}'.format(ventecash+ventecredit).replace(',', ' ').replace('.', ',')"/></td>
                             </tr>
                     </tbody>
                 </table>
