--- a/caisse/views/report_ventes.xml
+++ b/caisse/views/report_ventes.xml
@@ -47,7 +47,23 @@
                                 <td style="background-color:#ccc;font-weight:bold;fon-size:18px;"><span t-esc="'{:,.0f}'.format(margecash).replace(',', ' ').replace('.', ',')"/></td>
                                 <td style="background-color:#ccc;font-weight:bold;fon-size:18px;"><span t-esc="'{:,.0f}'.format(ventecash).replace(',', ' ').replace('.', ',')"/></td>
                             </tr>
-                        
+                    </tbody>
+                    </table>
+                    <table class="table table-condensed">
+                    <thead>
+                        <tr class="text-center">
+                            <th>Code</th>
+                            <th>Client</th>
+                            <th>Produit</th>
+                            <th>Quantié vendue</th>
+                            <th>Coût de revient</th>
+                            <th>Pu Vente Net</th>
+                            <th>Marge unitaire</th>
+                            <th>Marge totale</th>
+                            <th>Total vendu</th>
+                        </tr>
+                    </thead>
+                    <tbody>
                         <t t-set="margecredit" t-value="0"/>
                         <t t-set="ventecredit" t-value="0"/>    
                         <t t-foreach="clines" t-as="aline">
@@ -60,6 +76,7 @@
                                 <img t-else="" t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('Code128', aline['barcode'], 600, 150)" style="width:100%;height:20%;"/>
                                 <span t-esc="aline['barcode']"/></td>
                                 <td><span t-esc="aline['produit']"/></td>
+                                <td><span t-esc="aline['client']"/></td>
                                 <td align="right"><span t-esc="'{:,.0f}'.format(aline['quantite']).replace(',', ' ').replace('.', ',')"/></td>
                                 <td align="right"><span t-esc="'{:,.0f}'.format(aline['prixrevient']).replace(',', ' ').replace('.', ',')"/></td>
                                 <td align="right"><span t-esc="'{:,.0f}'.format(aline['prixvente']).replace(',', ' ').replace('.', ',')"/></td>
@@ -74,12 +91,12 @@
                                 <td style="background-color:#ccc;font-weight:bold;fon-size:18px;"><span t-esc="'{:,.0f}'.format(margecredit).replace(',', ' ').replace('.', ',')"/></td>
                                 <td style="background-color:#ccc;font-weight:bold;fon-size:18px;"><span t-esc="'{:,.0f}'.format(ventecredit).replace(',', ' ').replace('.', ',')"/></td>
                             </tr>
-                             <tr><td colspan="6" style="background-color:#ccc;font-weight:bold;fon-size:18px;">Grand Total</td>
+                             <tr><td colspan="7" style="background-color:#ccc;font-weight:bold;fon-size:18px;">Grand Total</td>
                                 <td style="background-color:#ccc;font-weight:bold;fon-size:18px;"><span t-esc="'{:,.0f}'.format(margecash+margecredit).replace(',', ' ').replace('.', ',')"/></td>
                                 <td style="background-color:#ccc;font-weight:bold;fon-size:18px;"><span t-esc="'{:,.0f}'.format(ventecash+ventecredit).replace(',', ' ').replace('.', ',')"/></td>
                             </tr>
-                    </tbody>
-                </table>
+                        </tbody>
+                    </table>
             </div>
         </t>
     </t>
