--- a/caisse/views/report_cloture.xml
+++ b/caisse/views/report_cloture.xml
@@ -35,10 +35,10 @@
                         <t t-foreach="o.statement_ids" t-as="st">
                          <t t-if="st.journal_id.type=='cash'">
                            <t t-foreach="st.line_ids" t-as="stline">
-                              <t t-if="'difference' in stline.name">
+                              <t t-if="'comptage' in stline.name">
                                  <t t-set="ecart" t-value="ecart+stline.amount"/>
                               </t>
-                              <t t-if="'Main' in stline.name">
+                              <t t-if="'Shop' in stline.name">
                                  <t t-set="venteesp" t-value="venteesp+stline.amount"/>
                               </t>
                             </t>
@@ -90,10 +90,9 @@
                            <t t-foreach="o.statement_ids" t-as="st">
                            <t t-if="st.journal_id.type=='bank'">
                            <t t-foreach="st.line_ids" t-as="stline">
-                           <tr><td><strong>Client</strong></td><td><strong>Montant</strong></td></tr>
-                            <tr><td align="right"><span t-esc="stline.partner_id.name"/></td>
+                            <tr><td><span t-esc="stline.partner_id.name"/></td>
                                  <td align="right"><span t-esc="'{:,.0f}'.format(stline.amount).replace(',', ' ').replace('.', ',')"/></td></tr>
-                           <tr><td><strong>Total</strong></td><td><strong><span t-esc="'{:,.0f}'.format(ventecheq).replace(',', ' ').replace('.', ',')"/></strong></td></tr>
+                           <tr><td><strong>Total</strong></td><td  align="right"><strong><span t-esc="'{:,.0f}'.format(ventecheq).replace(',', ' ').replace('.', ',')"/></strong></td></tr>
                             </t>
                            </t>
                            </t>
