--- a/caisse/views/report_cloture.xml
+++ b/caisse/views/report_cloture.xml
@@ -15,7 +15,7 @@
                 <div style="width:100%; float:left;">
                  <div style="width:50%;float:left; padding-left:5px">
                    <div style="width:100%;font-size:16px; line-height:30px; margin-top:20px" >
-                        <table style="width:80%" class="table">
+                        <table style="width:85%" class="table">
 						 <thead>
                            <tr><th colspan="3" align="center"><strong>ENCAISSE</strong></th></tr>
                            <tr><th align="center"><strong>Nombre</strong></th><th align="center"><strong>Billet/Pièce</strong></th><th align="center"><strong >Sous total</strong></th></tr>
@@ -47,9 +47,9 @@
                         <table style="width:80%" class="table">
 						 <thead>
                            <tr><th colspan="2" align="center"><strong>AJUSTEMENT COMPTABLE</strong></th></tr>
-                           <tr><td><strong>Solde initial</strong></td><td><span t-esc="'{:,.0f}'.format(o.cash_register_balance_start).replace(',', ' ').replace('.', ',')"/></td></tr>
-                           <tr><td><strong>+     Ventes espèces</strong></td><td><span t-esc="'{:,.0f}'.format(venteesp).replace(',', ' ').replace('.', ',')"/></td></tr>
-                           <tr><td><strong>(+/-) Ecart</strong></td><td><span t-esc="'{:,.0f}'.format(ecart).replace(',', ' ').replace('.', ',')"/></td></tr>
+                           <tr><td><strong>Solde initial</strong></td><td align="right"><span t-esc="'{:,.0f}'.format(o.cash_register_balance_start).replace(',', ' ').replace('.', ',')"/></td></tr>
+                           <tr><td><strong>+     Ventes espèces</strong></td><td align="right"><span t-esc="'{:,.0f}'.format(venteesp).replace(',', ' ').replace('.', ',')"/></td></tr>
+                           <tr><td><strong>(+/-) Ecart</strong></td><td align="right"><span t-esc="'{:,.0f}'.format(ecart).replace(',', ' ').replace('.', ',')"/></td></tr>
 						 </thead>
                         </table>
                     </div>
