--- a/caisse/views/report_cloture.xml
+++ b/caisse/views/report_cloture.xml
@@ -9,8 +9,8 @@
                 <h3><span t-esc="res_company.name"/>: Etat de clôture de la caisse / Remise banque</h3>
                   </div>
                   <div style="width:100%; text-align:left; font-size:16px" >
-                Ouverture:<t t-esc="o.start_at" t-options="{'widget': 'datetime'}"/> <br/>
-                Clôture:<t t-esc="o.stop_at" t-options="{'widget': 'datetime'}"/> 
+                <strong>Ouverture:</strong><t t-esc="o.start_at" t-options="{'widget': 'datetime'}"/> <br/>
+                <strong>Clôture:</strong><t t-esc="o.stop_at" t-options="{'widget': 'datetime'}"/> 
                   </div>
                 <div style="width:100%; float:left;">
                  <div style="width:50%;float:left; padding-left:5px">
