--- a/caisse/views/report_cloture.xml
+++ b/caisse/views/report_cloture.xml
@@ -4,8 +4,8 @@
     <t t-call="web.html_container">
      <t t-call="web.internal_layout">
         <t t-foreach="docs" t-as="o">
-                <div class="page" style="font-family:Arial, Helvetica, sans-serif; letter-spacing:2px ">
-                  <div style="width:100%; text-align:center; font-size:13px" >
+                <div class="page" style="font-family:Arial, Helvetica, sans-serif; ">
+                  <div style="width:100%; text-align:center; font-size:12px" >
                 <h3><span t-esc="res_company.name"/>: Etat de clôture de la caisse / Remise banque</h3>
                   </div>
                   <div style="width:100%; text-align:left; font-size:16px" >
@@ -72,7 +72,8 @@
                     </div>
                   </div>
                  </div>
-
+              </div>
+              <div class="page" style="font-family:Arial, Helvetica, sans-serif; ">
                 <div style="width:100%; float:left;">
                  <div style="width:100%;float:left; padding-left:5px">
                    <div style="width:100%;font-size:20px; line-height:30px;" >
