--- a/caisse/views/report_cloture.xml
+++ b/caisse/views/report_cloture.xml
@@ -72,9 +72,8 @@
                     </div>
                   </div>
                  </div>
-              </div>
-              <div class="page" style="font-family:Arial, Helvetica, sans-serif; ">
-                <div style="width:100%; float:left;">
+
+                <div style="width:100%; float:left; margin-top:30px;">
                  <div style="width:100%;float:left; padding-left:5px">
                    <div style="width:100%;font-size:20px; line-height:30px;" >
                         <strong>Les chèques reçus</strong>
