--- a/caisse/views/report_etiquette.xml
+++ b/caisse/views/report_etiquette.xml
@@ -4,7 +4,32 @@
     <t t-call="web.html_container">
      <t t-call="web.internal_layout">
         <t t-foreach="docs" t-as="o">
-                
+          <div class="principal">
+            <div class="section1">
+                <div class="produit">
+                    produit
+                </div>
+                <div class="codebarre"> 
+                    barre
+                </div>
+            </div>
+            <div class="section2"> 
+                <div class="prix"> 
+                    prix
+                </div>
+                <div class="categ"> 
+                    CATEGORIE
+                </div>
+            </div>
+            <div class="section3"> 
+                <div class="devise">
+                    DJF
+                </div>
+                <div class="nomcat"> 
+                    A
+                </div>
+            </div>  
+          </div>  
         </t>
         </t>
     </t>
