--- a/caisse/views/report_etiquette.xml
+++ b/caisse/views/report_etiquette.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
+    <template id="minimal_layout_inherit" inherit_id="web.minimal_layout">
+		<xpath expr="//head" position="inside">
+			<link rel='stylesheet' href="/caisse/static/src/css/caisse.css"/>
+		</xpath>
+</template>
 <template id="report_bricoetiquette">
     <t t-call="web.html_container">
      <t t-call="web.internal_layout">
