--- a/caisse/views/caisse_view.xml
+++ b/caisse/views/caisse_view.xml
@@ -8,7 +8,7 @@
             <field name="arch" type="xml">
                <xpath expr="//button[@name='action_pos_session_validate']" position="after">
                 <button name="transferer" type="object" string="Sortie de caisse" attrs="{'invisible' : ['|', ('compta', '=', True),('state', '!=', 'closed')]}" class="oe_highlight" groups="account.group_account_manager"/>
-		<button name="transferer2" type="object" string="Remise en banque" attrs="{'invisible' : ['|', ('remis', '=', True),('compta', '=', False)]}" class="oe_highlight" groups="account.group_account_manager"/>       
+		<button name="transferer2" type="object" string="Remise en banque" attrs="{'invisible' : ['|', ('remis', '=', True),('compta', '!=', True)]}" class="oe_highlight" groups="account.group_account_manager"/>       
                 </xpath>
                <xpath expr="//field[@name='name']" position="after">
                                 <field name="compta"/>
