--- a/caisse/views/caisse_view.xml
+++ b/caisse/views/caisse_view.xml
@@ -11,8 +11,8 @@
 		<button name="transferer2" type="object" string="Remise en banque" attrs="{'invisible' : ['|', ('remis', '=', True),('compta', '=', False)]}" class="oe_highlight" groups="account.group_account_manager"/>       
                 </xpath>
                <xpath expr="//field[@name='name']" position="after">
-                                <field name="compta"/>
-		                <field name="remis"/>
+                                <field name="compta" readonly="1"/>
+		                <field name="remis" readonly="1"/>
                 </xpath>
             </field>
         </record>
