--- a/caisse/views/report_ventes.xml
+++ b/caisse/views/report_ventes.xml
@@ -52,7 +52,7 @@
                     <table class="table table-condensed">
                     <thead>
                         <tr class="text-center">
-                            <th>Code</th>
+                            <!--<th>Code</th>-->
                             <th>Produit</th>
                             <th>Client</th>
                             <th>Quantié vendue</th>
@@ -71,10 +71,10 @@
                                 <!--<td><img t-if="aline['barcode']" t-att-src="'data:image/png;base64,%s' % aline['barcode']"/></td>-->
                                 <!--<td><t t-set="qr_src">/report/barcode/?type=QR&amp;value=<t t-esc="aline['barcode']" />&amp;width=50&amp;height=15</t><img t-att-src="'%s' % qr_src"/></td>-->
                                 <!--<td><span t-esc="aline['barcode']"/></td>-->
-                                <td><img t-if="aline['barcode'] and len(aline['barcode']) == 13" t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('EAN13', aline['barcode'], 600, 150)" style="width:100%;height:20%;"/>
+                                <!--<td><img t-if="aline['barcode'] and len(aline['barcode']) == 13" t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('EAN13', aline['barcode'], 600, 150)" style="width:100%;height:20%;"/>
                                 <img t-elif="aline['barcode'] and len(aline['barcode']) == 8" t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('EAN8', aline['barcode'], 600, 150)" style="width:100%;height:20%;"/>
                                 <img t-else="" t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('Code128', aline['barcode'], 600, 150)" style="width:100%;height:20%;"/>
-                                <span t-esc="aline['barcode']"/></td>
+                                <span t-esc="aline['barcode']"/></td>-->
                                 <td><span t-esc="aline['produit']"/></td>
                                 <td><span t-esc="aline['client']"/></td>
                                 <td align="right"><span t-esc="'{:,.0f}'.format(aline['quantite']).replace(',', ' ').replace('.', ',')"/></td>
