--- a/caisse/views/report_stock.xml
+++ b/caisse/views/report_stock.xml
@@ -11,7 +11,7 @@
                 <table class="table table-condensed">
                     <thead>
                         <tr class="text-center">
-                            <!--<th>Code</th>-->
+                            <th>Code</th>
                             <th>Produit</th>
                             <th>Stock initial</th>
                             <th>Quantité entrée</th>
@@ -29,6 +29,7 @@
                                 <img t-elif="aline['barcode'] and len(aline['barcode']) == 8" t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('EAN8', aline['barcode'], 600, 150)" style="width:100%;height:20%;"/>
                                 <img t-else="" t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('Code128', aline['barcode'], 600, 150)" style="width:100%;height:20%;"/>
                                 <span t-esc="aline['barcode']"/></td>-->
+                                <td><span t-esc="aline['barcode']"/></td>
                                 <td><span t-esc="aline['produit']"/></td>
                                 <td align="right"><span t-esc="'{:,.0f}'.format(aline['stinit']).replace(',', ' ').replace('.', ',')"/></td>
                                 <td align="right"><span t-esc="'{:,.0f}'.format(aline['qteent']).replace(',', ' ').replace('.', ',')"/></td>
