--- a/caisse/wizard/etats_caisse.xml
+++ b/caisse/wizard/etats_caisse.xml
@@ -87,6 +87,7 @@
                     <group>
                         <field name="start_date"/>
                         <field name="end_date"/>
+                        <field name="categorie"/>                            
                     </group>
                     <group>
                         <field name="location"/>
