--- a/caisse/wizard/etats_caisse.xml
+++ b/caisse/wizard/etats_caisse.xml
@@ -86,7 +86,8 @@
                   <group>
                     <group>
                         <field name="start_date"/>
-                        <field name="end_date"/>                       
+                        <field name="end_date"/>
+                        <field name="categorie"/>
                     </group>
                     <group>
                         <field name="location"/>
